--- a/ExpensesAPI/ExpensesAPI.csproj
+++ b/ExpensesAPI/ExpensesAPI.csproj
@@ -121,9 +121,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901141905383_InitialCreate.cs" />
+    <Compile Include="Migrations\201901141905383_InitialCreate.Designer.cs">
+      <DependentUpon>201901141905383_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901190125536_AddRelationships.cs" />
+    <Compile Include="Migrations\201901190125536_AddRelationships.Designer.cs">
+      <DependentUpon>201901190125536_AddRelationships.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IService.cs" />
+    <Compile Include="Services\TransactionService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -137,6 +149,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901141905383_InitialCreate.resx">
+      <DependentUpon>201901141905383_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901190125536_AddRelationships.resx">
+      <DependentUpon>201901190125536_AddRelationships.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
