Add SeedData class to hold and setup test data

--- a/ExpensesCoreAPI.Test.Integration/ExpensesCoreAPI.Test.Integration.csproj
+++ b/ExpensesCoreAPI.Test.Integration/ExpensesCoreAPI.Test.Integration.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\ExpensesCoreAPI\ExpensesCoreAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ResourceTests\Account\" />
+    <Folder Include="ResourceTests\Transaction\" />
+    <Folder Include="ResourceTests\User\" />
+  </ItemGroup>
+
 </Project>
