Add bearer token authentication

--- a/ExpensesCoreAPI/appsettings.json
+++ b/ExpensesCoreAPI/appsettings.json
@@ -7,5 +7,9 @@
   "ConnectionStrings": {
     "ExpensesDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=ExpensesDB;Integrated Security=false;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtIssuerOptions": {
+    "Issuer": "ExpensesApi",
+    "Audience" : "http://localhost:44372/"
+  }
 }
